syntax = "proto3";

package fillmore_labs.kafka.sensors.v1;

import "google/protobuf/timestamp.proto";

option go_package = "sensorsv1";
option java_multiple_files = true;
option java_outer_classname = "SensorStateProto";
option java_package = "com.fillmore_labs.kafka.sensors.v1";

// State change of a sensor.
message SensorState {
  string id = 1;
  google.protobuf.Timestamp time = 2;
  // New state of the sensor.
  enum State {
    STATE_UNSPECIFIED = 0;
    STATE_OFF = 1;
    STATE_ON = 2;
  }
  State state = 3;
}
