syntax = "proto3";

package fillmore_labs.kafka.sensors.v1;

import "fillmore_labs/kafka/sensors/v1/sensor_state.proto";
import "google/protobuf/duration.proto";

option go_package = "sensorsv1";
option java_multiple_files = true;
option java_outer_classname = "SensorStateDurationProto";
option java_package = "com.fillmore_labs.kafka.sensors.v1";

// Duration a sensor was in this state.
message SensorStateDuration {
  SensorState event = 1;
  google.protobuf.Duration duration = 2;
}
